[package]
name = "ibm_5150"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.11.0"
winit = "0.28.1"
winit_input_helper = "0.13.0"
mint = "0.5.9"
rand = "0.8.5"
lazy_static = "1.4.0"